[package]
name = "bcm2709-spi"
version = "0.1.1"
authors = ["Daniel Pruessner <daniel.pruessner@ieee.org>"]
description = "Bare-metal (through mmap(...)) access of BCM2709 SPI peripheral in Rust for Linux host"
repository = "https://github.com/dpruessner/rust-bcm2709-spi"
keywords = [ "spi", "raspberry", "pi", "bcm2709", "peripheral" ]
license = "MIT"

[dependencies]
libc = "0.2.0"
vcell = "0.1.0"
